- Add feedback button - Add data disclaimer in README

--- a/inst/app/www/shinymrp.css
+++ b/inst/app/www/shinymrp.css
@@ -115,3 +115,10 @@
     text-align: justify;
     font-size: 1.05em;
   }
+
+  .feedback {
+    position: fixed;
+    top: 0.6%;
+    left: 93.6%;
+    z-index: 1000;
+  }
